--- a/style.css
+++ b/style.css
@@ -121,11 +121,11 @@ h3 {
 .player-icon,
 .cpu-icon {
   font-size: 7em;
-  /* transition: all .3s; */
+  transition: all .3s;
 }
 
 .animation-win {
-  animation: scale 0.3s 1.25s;
+  animation: shake 0.3s 1.25s;
   animation-fill-mode: forwards;
 }
 
@@ -137,6 +137,14 @@ h3 {
 .animation-tie {
   animation: scale 0.3s 0.5s;
   animation-fill-mode: forwards;
+}
+
+.animation-player-atk {
+  animation: player-attack 0.5s 0s;
+}
+
+.animation-cpu-atk {
+  animation: cpu-attack 0.5s 0s;
 }
 
 .selection-battle > .fa-hand-rock {
@@ -188,7 +196,6 @@ h3 {
   height: 3em;
   transform: scale(0);
   transition: all 0.3s;
-
 }
 
 .restart.appear {
@@ -210,14 +217,35 @@ h3 {
   10% { transform: translate(-3px, 0px) rotate(5deg); }
   15% { transform: translate(30px, 2px) rotate(0deg); }
   20% { transform: translate(1px, -1px) rotate(5deg); }
-  /* 25% { transform: translate(-1px, 2px) rotate(-5deg); }
-  30% { transform: translate(-3px, 1px) rotate(0deg); }
-  35% { transform: translate(50px, 1px) rotate(-1deg); }
-  40% { transform: translate(-1px, -1px) rotate(1deg); }
-  45% { transform: translate(10px, 2px) rotate(0deg); }
-  50% { transform: translate(1px, -2px) rotate(-1deg); } */
+
   55% { transform: scale(1.75); }
   100%{ transform: scale(0); }
+}
+
+@keyframes player-attack {
+  0% { transform: translateX(0px) rotate(0deg); }
+  90% { transform: translateX(-100px) rotate(-15deg); }
+  
+  92% { transform: translate(1px, 1px) rotate(0deg); }
+  94% { transform: translate(-10px, -2px) rotate(-5deg); }
+  96% { transform: translate(-3px, 0px) rotate(5deg); }
+  98% { transform: translate(30px, 2px) rotate(0deg); }
+  99% { transform: translate(1px, -1px) rotate(5deg); }
+  
+  100% { transform: translateX(100px) rotate(45deg); }
+}
+
+@keyframes cpu-attack {
+  0% { transform: translateX(0px) rotate(0deg); }
+  90% { transform: translateX(100px) rotate(15deg); }
+
+  92% { transform: translate(1px, 1px) rotate(0deg); }
+  94% { transform: translate(-10px, -2px) rotate(-5deg); }
+  96% { transform: translate(-3px, 0px) rotate(5deg); }
+  98% { transform: translate(30px, 2px) rotate(0deg); }
+  99% { transform: translate(1px, -1px) rotate(5deg); }
+
+  100% { transform: translateX(-100px) rotate(-45deg); }
 }
 
 @keyframes scale {
