--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ h3 {
 }
 
 .selection-icon {
+  z-index: 99;
   font-size: 8em;
   color: var(--primary-dark);
   transition: all .3s;
@@ -105,6 +106,7 @@ h3 {
 }
 
 .battle-grid.appear {
+  overflow: hidden;
   max-width: 50em;
   border-radius: 8px;
   border: 5px solid var(--primary-dark);
@@ -120,6 +122,7 @@ h3 {
 
 .player-icon,
 .cpu-icon {
+  position: relative;
   font-size: 7em;
   transition: all .3s;
 }
@@ -177,7 +180,7 @@ h3 {
   width: min(90%);
   margin: 1em auto;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   flex-direction: column;
   gap: 1em;
 
@@ -224,28 +227,24 @@ h3 {
 
 @keyframes player-attack {
   0% { transform: translateX(0px) rotate(0deg); }
-  90% { transform: translateX(-100px) rotate(-15deg); }
+  90% { transform: translateX(-150px) rotate(-15deg); }
   
   92% { transform: translate(1px, 1px) rotate(0deg); }
   94% { transform: translate(-10px, -2px) rotate(-5deg); }
   96% { transform: translate(-3px, 0px) rotate(5deg); }
   98% { transform: translate(30px, 2px) rotate(0deg); }
-  99% { transform: translate(1px, -1px) rotate(5deg); }
-  
-  100% { transform: translateX(100px) rotate(45deg); }
+  100% { transform: translate(1px, -1px) rotate(5deg); }
 }
 
 @keyframes cpu-attack {
   0% { transform: translateX(0px) rotate(0deg); }
-  90% { transform: translateX(100px) rotate(15deg); }
+  90% { transform: translateX(150px) rotate(15deg); }
 
   92% { transform: translate(1px, 1px) rotate(0deg); }
   94% { transform: translate(-10px, -2px) rotate(-5deg); }
   96% { transform: translate(-3px, 0px) rotate(5deg); }
   98% { transform: translate(30px, 2px) rotate(0deg); }
-  99% { transform: translate(1px, -1px) rotate(5deg); }
-
-  100% { transform: translateX(-100px) rotate(-45deg); }
+  100% { transform: translate(1px, -1px) rotate(5deg); }
 }
 
 @keyframes scale {
@@ -253,3 +252,66 @@ h3 {
   50% { transform: scale(0.7); }
   100% { transform: scale(1.1); }
 }
+
+/* media queries */
+
+@media (max-width: 750px) {
+  h1 {
+    margin: 0.5em 0 0;
+    font-size: 1.6em;
+  }
+
+  h3 {
+    font-size: 1.1em;
+    margin: 0;
+  }
+
+  .selection-grid {
+    padding: 1.2em 1em;
+  }
+
+  .selection-icon {
+    font-size: 6em;
+  }
+
+  .battle-grid.appear {
+    padding: 1.2em 1em;
+    gap: 1em;
+  }
+
+  .player-icon,
+  .cpu-icon {
+    font-size: 5em;
+  }
+
+  .score-grid.appear {
+    font-size: 1em;
+    gap: 0.5em;
+  }
+
+  .restart.appear {
+    width: 8em;
+    height: 3em;
+  }
+
+  @keyframes player-attack {
+    0% { transform: translateX(0px) rotate(0deg); }
+    90% { transform: translateX(-50px) rotate(-15deg); }
+    
+    92% { transform: translate(1px, 1px) rotate(0deg); }
+    94% { transform: translate(-10px, -2px) rotate(-5deg); }
+    96% { transform: translate(-3px, 0px) rotate(5deg); }
+    98% { transform: translate(30px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -1px) rotate(5deg); }
+  }
+  
+  @keyframes cpu-attack {
+    0% { transform: translateX(0px) rotate(0deg); }
+    90% { transform: translateX(50px) rotate(15deg); }
+  
+    92% { transform: translate(1px, 1px) rotate(0deg); }
+    94% { transform: translate(-10px, -2px) rotate(-5deg); }
+    96% { transform: translate(-3px, 0px) rotate(5deg); }
+    98% { transform: translate(30px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -1px) rotate(5deg); }
+  }
