--- a/style.css
+++ b/style.css
@@ -315,3 +315,4 @@ h3 {
     98% { transform: translate(30px, 2px) rotate(0deg); }
     100% { transform: translate(1px, -1px) rotate(5deg); }
   }
+}
